fix overflow per smartphone

--- a/public/css/game.css
+++ b/public/css/game.css
@@ -30,6 +30,7 @@ body{
     background-color: rgb(5, 64, 5);
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     color: #eeee;
+    position: relative;
 }
 
 a{
